Return debug logs
